Added in wrong files

--- a/resume.tex
+++ b/resume.tex
@@ -40,7 +40,7 @@
 
 \setlength{\tabcolsep}{0in}
 
-\setlength{\textheight}{9.75in}
+\setlength{\textheight}{10in}
 
 \setlength{\textwidth}{7in}
 
@@ -49,6 +49,8 @@
 \setlength{\topskip}{0in}
 
 \setlength{\voffset}{0.1in}
+
+\setlength{\parskip}{1pt plus 1pt minus 1pt}
 
 %-----------------------------------------------------------
 
@@ -66,7 +68,7 @@
 
     \end{shaded}
 
-  }\vspace{-5pt}
+  }\vspace{-10pt}
 
 }
 
@@ -78,7 +80,7 @@
 
 		\textit{#3} & \textit{#4} \\
 
-\end{tabular*}\vspace{-6pt}}
+\end{tabular*}\vspace{-4pt}}
 
 %-----------------------------------------------------------
 
@@ -102,53 +104,13 @@ Software Engineer & addam.hardy@gmail.com \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\vspace{8pt}
+\vspace{10pt}
 
-To find a secure position in a small team environment passionate about innovation, communication and test driven development, that is focused on results and progress instead of process. Less a “job” and more a group of close friends that work well together and are driven to push each other past their limits.
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\resheading{Education}
+Find a secure position in a small team environment passionate about innovation, communication and test driven development, that is focused on results and progress instead of process. Less a “job” and more a group of close friends that work well together and are driven to push each other past their limits.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{itemize}
-
-\item
-
-	\ressubheading{University of Arkansas}{Fayetteville, AR}{B.Sc Computer Science (current), B.Sc Electrical Engineering (current)}{2010 - 2012(projected)}
-
-\item
-
-	\ressubheading{Defense Language Institute}{Monterey, CA}{A.Arts Korean Language, Korean Basic Course}{2004-2006}
-
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\resheading{Skills}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{itemize}
-
-\item {\bf Development:} C/C++, Python, CUDA, JavaScript, Ruby (Rails), Java, FORTRAN, MATLAB
-
-\item {\bf Numerical Analysis:} Optimization, Linear Algebra, ODEs, PDEs, Monte Carlo, Computational Physics, Complex Systems, Iterative Methods, Tomology
-
-\item {\bf Computer Science:} Machine Learning, Data Mining, Parallel Programming, Data Structures, Artificial Intelligence, Operating Systems
-
-\item Discovering and implementing new ideas. Give me an API and a problem and I will figure it out.
-
-\item Diverse background in Math, Computer Science, Physics and Biology allows me to communicate to a wide scientific and general audience and begin contributing to any group immediately.
-
-\item I have worked in many places in a myriad of fields. I can readily learn and adapt to a new discipline, area or environment and start pushing real results quickly.
-
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\resheading{Research and Work Experience}
+\resheading{Research and Technical Experience}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -156,68 +118,64 @@ To find a secure position in a small team environment passionate about innovatio
 
 \item
 
-	\ressubheading{Bloomberg LP}{New York, NY}{Financial Software Development Intern}{Summer 2011}
+	\ressubheading{MobileFWD, LLC.}{Fayetteville, AR}{iOS Game Developer}{May 2012 - Current}
 
 	\begin{itemize}
 
-		\resitem{Developed end-to-end reporting software in \texttt{C++} and \texttt{javascript}}
-
-    \resitem{Implemented statistical models to perform forward and backward portfolio analysis}
+		\resitem{Developer on the Trivi.al and Piction.al iOS games as well as developed Ruby on Rails applications for back-end administration of the app for management and user monitization and engagement analytics.}
 
 	\end{itemize}
-
+	
 \item
 
-	\ressubheading{DOE Joint Genome Institute (Lawrence Berkeley National Lab)}{Walnut Creek, CA}{Researcher in Analysis Group under Dr. Zhong Wang}{Summer 2010}
+	\ressubheading{SocialVolt, Inc.}{Overland Park, KS}{User Interface/Ruby On Rails Developer}{November 2011 - May 2012}
 
 	\begin{itemize}
 
-		\resitem{Created \textbf{open source} genome validation software tool in \texttt{python} and \texttt{C}}
-
-    \resitem{Used machine learning to mine TBs of genome data efficiently using novel likelihood function}
+		\resitem{Worked as the user interface developer and augment to the back-end team on a \texttt{Ruby on Rails} enterprise level social media management platform. Took color-comps from the designer and implemented them to spec using \texttt{CSS3} and \texttt{HTML5} with \texttt{SASS} and \texttt{Javascript.}}
 
 	\end{itemize}
-
-\item 
-
-	\ressubheading{Los Alamos National Laboratory}{Los Alamos, NM}{Researcher in Metagenomics Group under Dr. Nick Hengartner}{Summer 2009}
-
-	\begin{itemize}
-
-		\resitem{Wrote \textbf{open source} alignment algorithm software tool in \texttt{python}, \texttt{C} and \texttt{CUDA}}
-
-    \resitem{Used statistical models to discover sequence alignments using parallel algorithms on GPUs}
-
-	\end{itemize}
-
+	
 \item
 
-	\ressubheading{Oregon State University}{Corvallis, OR}{Research Assistant under Prof. Malgorzata Peszynska and Prof. Rubin Landau}{2005-2008}
+	\ressubheading{NORMES, University of Arkansas}{Fayetteville, AR}{Ruby On Rails Developer}{February 2011 - November 2011}
 
 	\begin{itemize}
 
-		\resitem{Finite element analysis with uncertainty and web-based teaching in \texttt{Java}}
+		\resitem{Developed a Ruby on Rails testing application to be used by the Arkansas Department of Education for the collection and analysis of educational metrics.}
 
 	\end{itemize}
-
+	
 \item
 
-	\ressubheading{Max Plank Institute for the Physics of Complex Systems}{Dresden, Germany}{NSF REU Research Assistant under Prof. Steven Tomsovic}{Summer 2007}
+	\ressubheading{MissionFocus, LLC.}{Columbia, Maryland}{DCGS Cloud Software Engineer}{November 2011 - May 2012}
 
 	\begin{itemize}
 
-		\resitem{Research on extreme value statistics in \texttt{MATLAB} and \texttt{FORTRAN}}
+		\resitem{Developed Map/Reduce algorithms to process and alalyze HUMINT reports for U.S. Army data sources.}
+		
+		\resitem{Developed front-end \texttt{javascript} applications using \texttt{ExtJS} framework to enable easy access to the reports stored on the \texttt{HADOOP} file system.}
 
 	\end{itemize}
-
+	
 \item
 
-	\ressubheading{University of California: Davis}{Davis, CA}{NSF REU Research Assistant under Prof. Daniel Cox}{Summer 2006}
+	\ressubheading{National Security Agency/Central Security Service}{Honolulu, HI}{RTRG Software Engineer}{April 2007 - June 2010}
 
 	\begin{itemize}
 
-		\resitem{Computational biophysics research as applied to protein folding in \texttt{Java}}
+		\resitem{Contributed to the creation of APIs into previously unopened national technical databases to continue to push the collaboration and information sharing methodology. By doing so successfully collaborated with several national databases to expose their data through web-based APIs.}
+		
+		\resitem{Co-created, developed and designed all versions and phases of the current implementation of the Dark Mist Framework. An integrated, plugin-based web 2.0 framework capable of being applied to many missions and data-sets - This has saved hundreds of man-hours in analysis and has significantly decreased the initial training for new analysts. Working as a Senior Developer on the project developing new ideas and methods to implement.}
 
+		\resitem{Performed project manager duties by collecting, prioritizing, and assigning requirements and tasks to the team. Reviewing and approving code by the other developer on the team.}
+		
+		\resitem{Developed a parser to database over 120,000 archived reports to enable statistics and text searching of all reports with instantly returned results; vastly increasing trend analysis potential of a high value target.}
+		
+		\resitem{Maintained the technical status and operation of several high priority databases used 24/7 for the execution of signals analysis in the Pacific. Optimized for maximum reliability and up-time for the customer.}
+		
+		\resitem{Identified weaknesses and potential improvements in workflows and analytical processes used by several missions and designed and developed software, processes, and technologies to greatly increase efficiency, decrease duplication of effort, enhance collaboration and directly impact the overall success of the mission.}
+		
 	\end{itemize}
 
 \end{itemize}
@@ -230,37 +188,121 @@ To find a secure position in a small team environment passionate about innovatio
 
 \begin{itemize}
 
-\item \ressubheading{ALE: Assembly Likelihood Estimator}{C, Python}{Probabalistic evaluation of genome assemblies}{2010 - Current}
+\item \ressubheading{Tesseract}{Ruby on Rails}{Developer availability platform for Northwest Arkansas dev community}{Summer 2012}
 
-  \begin{itemize}
+ 	\begin{itemize}
 
-    \resitem{Uses statistical likelihood function to score and rank genome assemblies}
+    \resitem{Platform for freelance developers in Northwest Arkansas to connect with potential employers and recruiters by allowing them to display their skills and availablity in a central location.}
+    
+	\end{itemize}
+	
+\item \ressubheading{Planet Defense}{Ruby}{Demonstration of gaming capabilities with Ruby language and GOSU framework}{Spring 2012}
 
-		\resitem{Publication being prepared for Genome Research}
+ 	\begin{itemize}
 
-    \resitem{Presented at several conferences including SIAM Scientific Computing}
-
+    \resitem{Vertical scrolling space shooter built to demonstrate the video game capabilities of a scripting language like Ruby.}
+    
 	\end{itemize}
 
-\item \ressubheading{Velvetrope}{Python, C, CUDA}{A parallel statistical algorithm for finding homologous regions within sequences}{2009 - 2010}
+\end{itemize}
 
-  \begin{itemize}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-		\resitem{Profiled in DEIXIS Magazine, Publication submitted to BMC Bioinformatics}
+\resheading{Technical Skills}
 
-    \resitem{Presented at several conferences including Supercomputing and Q-bio}
-
-	\end{itemize}
-
-\item \ressubheading{BetaHelix}{Java}{Computes various statistics about a left or right handed beta helix}{2006 - 2007}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{itemize}
 
-		\resitem{Published in Prion: Left handed $\beta$ helix models for mammalian prion fibrils.}
-
+\item {\bf Programming:} Ruby, Ruby on Rails, Objective-C, Java, Perl, PHP, Javascript, Python, Ajax Frameworks, Object-Oriented design 
+	\begin{itemize}
+		\item Ultimately, I am a computer programmer. Not only by trade but by personal interests and hobbies. I could list many different languages I have had experience with but the most important point is that I am personally driven to learn and research new things all the time. I know several languages and techniques and if I don’t know it, I can probably learn it easily and quickly apply it to any task I am given. 
 	\end{itemize}
 
+\item {\bf Test/Behavior Driven Development:} Cucumber, Selenium, Capybara, RSpec, OCMock, GHUnit
 
+\item {\bf Database Systems:} PostgreSQL, MySQL, Oracle, DB2, SQLite
+
+\item {\bf Cloud Analytics/Storage:} Hadoop, Cloudbase, Facebook Hive, Zookeeper
+
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\resheading{Military Experience}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{itemize}
+
+\item
+
+	\ressubheading{U.S. Army}{}{Cryptologic Linguist/Signals Intelligence Interceptor}{2004-2011}
+
+\end{itemize}
+
+\linebreak
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\resheading{Intelligence Experience}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\begin{itemize}
+%
+%\item \ressubheading{Signals Intelligence Analyst}{NSA/CSS Hawaii}{Analyst for Asian/Pacific Theater Targets}{2006 - 2007}
+%
+%\begin{itemize}
+%
+%		\resitem{Developed summary reporting on a high value target in a team atmosphere which maintained global awareness for policy and decision makers on the rapidly changing state of military units, disposition of forces, and wartime capabilities and technologies of a potential enemy.}
+%		\resitem{Researched and produced various technical and non-technical related reports on a high value target that helped to maintain awareness for policy makers of war-time capabilities and intentions.}
+%		\resitem{Ensured in a team environment the up-to-date knowledge of the North Korean target by maintaining national databases.}
+%		\resitem{Contributed to long-term trend analysis of signals intelligence to provide input to SIGINT assessments.}
+%		
+%	\end{itemize}
+%
+%\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\resheading{Education}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{itemize}
+
+\item
+
+	\ressubheading{University of Arkansas}{Fayetteville, AR}{B.Sc Computer Science (current), B.Sc Electrical Engineering (current)}{2011 - 2014(projected)}
+
+\item
+
+	\ressubheading{Defense Language Institute}{Monterey, CA}{A.Arts Korean Language, Korean Basic Course}{2004-2006}
+	
+\item
+
+	\ressubheading{Goodfellow AFB}{San Angelo, TX}{Signals Intelligence Interceptor Course}{2006}
+	
+
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\resheading{Language Ability}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{itemize}
+
+\item
+
+	\ressubheading{Korean}{}{DLPT certified professional fluency}{}
+
+\item
+
+	\ressubheading{French}{}{Functional fluency}{}
+	
 \end{itemize}
 
 \end{document}
