Updating with commented out sections

--- a/resume.tex
+++ b/resume.tex
@@ -72,6 +72,7 @@
 
 }
 
+
 \newcommand{\ressubheading}[4]{
 
 \begin{tabular*}{6.5in}{l@{\cftdotfill{\cftsecdotsep}\extracolsep{\fill}}r}
@@ -79,6 +80,17 @@
 		\textbf{#1} & #2 \\
 
 		\textit{#3} & \textit{#4} \\
+
+\end{tabular*}\vspace{-4pt}}
+
+
+\newcommand{\singleline}[3]{
+
+\begin{tabular*}{6.5in}{l@{\cftdotfill{\cftsecdotsep}\extracolsep{\fill}}r}
+
+		\textbf{#1} & #2 \\
+
+		& \textit{#3} \\
 
 \end{tabular*}\vspace{-4pt}}
 
@@ -243,6 +255,8 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \linebreak
 
+% I don't need these sections for most of the jobs I'm applying for right now
+% so I commented these sections out. 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %\resheading{Intelligence Experience}
@@ -261,6 +275,20 @@ Find a secure position in a small team environment passionate about innovation, 
 %		\resitem{Contributed to long-term trend analysis of signals intelligence to provide input to SIGINT assessments.}
 %		
 %	\end{itemize}
+%
+%\end{itemize}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\resheading{Clearances and Polygraphs}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\begin{itemize}
+%
+%\item \singleline{Counter Intelligence Polygraph}{NSA/CSS Hawaii}{August 2006}
+%
+%\item \ressubheading{TS/SCI}{NSA/CSS Hawaii}{}{2006-2011}
 %
 %\end{itemize}
 
