Updating title for mobilefwd

--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,7 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \item
 
-	\ressubheading{MobileFWD, LLC.}{Fayetteville, AR}{iOS Game Developer}{May 2012 - Current}
+	\ressubheading{MobileFWD, LLC.}{Fayetteville, AR}{Senior Developer}{May 2012 - Current}
 
 	\begin{itemize}
 
