Updating job history

--- a/resume.tex
+++ b/resume.tex
@@ -130,7 +130,27 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \item
 
-	\ressubheading{MobileFWD, LLC.}{Fayetteville, AR}{Senior Developer}{May 2012 - Current}
+	\ressubheading{RevUnit, LLC.}{Bentonville, AR}{Lead Developer}{February 2013 - Current}
+
+	\begin{itemize}
+
+		\resitem{Leading engineering design and implementation for RevUnit's clients on a wide range of digital products. }
+
+	\end{itemize}
+
+\item
+
+	\ressubheading{IdeaLoop, LLC.}{Dallas, TX}{Contract Developer}{October 2012 - February 2013}
+
+	\begin{itemize}
+
+		\resitem{Javascript developer for IdeaLoop clients. Primarily focused on enterprise level javascript applications.}
+
+	\end{itemize}
+
+\item
+
+	\ressubheading{MobileFWD, LLC.}{Fayetteville, AR}{Senior Developer}{May 2012 - October 2012}
 
 	\begin{itemize}
 
@@ -154,7 +174,7 @@ Find a secure position in a small team environment passionate about innovation, 
 
 	\begin{itemize}
 
-		\resitem{Developed a Ruby on Rails testing application to be used by the Arkansas Department of Education for the collection and analysis of educational metrics.}
+		\resitem{Developed a Ruby on Rails testing application to be used by the Arkansas Department of Education for the collection and analysis of education metrics.}
 
 	\end{itemize}
 	
@@ -205,14 +225,6 @@ Find a secure position in a small team environment passionate about innovation, 
  	\begin{itemize}
 
     \resitem{Platform for freelance developers in Northwest Arkansas to connect with potential employers and recruiters by allowing them to display their skills and availablity in a central location.}
-    
-	\end{itemize}
-	
-\item \ressubheading{Planet Defense}{Ruby}{Demonstration of gaming capabilities with Ruby language and GOSU framework}{Spring 2012}
-
- 	\begin{itemize}
-
-    \resitem{Vertical scrolling space shooter built to demonstrate the video game capabilities of a scripting language like Ruby.}
     
 	\end{itemize}
 
