Updating revunit line

--- a/resume.tex
+++ b/resume.tex
@@ -134,7 +134,7 @@ Find a secure position in a small team environment passionate about innovation, 
 
 	\begin{itemize}
 
-		\resitem{Leading engineering design and implementation for RevUnit's clients on a wide range of digital products. }
+		\resitem{Leading engineering design and implementation for RevUnit's clients on a wide range of digital products. Focusing on iOS and Android mobile applications, Ruby on Rails web applications and Single Page Javascript applications using Backbone and Ember.js.}
 
 	\end{itemize}
 
