--- a/resume.tex
+++ b/resume.tex
@@ -102,9 +102,9 @@
 
 \textbf{\Large Addam Hardy} & \textbf{\today} \\
 
-Software Engineer & addam.hardy@gmail.com \\
+Lead Software Engineer & addam.hardy@gmail.com \\
 
-718B N. Walnut St., Siloam Springs, AR, 72761 &  \\
+6358 Copper Ridge Lane, Fayetteville, AR, 72704 &  \\
 
 (808) 640-8169 \\
 
@@ -126,11 +126,31 @@ Find a secure position in a small team environment passionate about innovation, 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{itemize}
-
 \item
 
-	\ressubheading{RevUnit, LLC.}{Bentonville, AR}{Lead Developer}{February 2013 - Current}
+	\ressubheading{Simply Measured, Inc}{Seattle, WA}{Lead Software Engineer}{September 2015 - Current}
+
+	\begin{itemize}
+
+		\resitem{Leading user application architectural design and development on Simply Measured's Consumer Research Division (formally known as Datarank).}
+
+	\end{itemize}
+	
+	
+\item
+
+	\ressubheading{Datarank, Inc}{Fayetteville, AR}{Lead Developer, Web \& Mobile}{March 2014 - September 2015}
+
+	\begin{itemize}
+
+		\resitem{Leading architectural design and development on Datarank's web and mobile applications. Specializing in Ruby on Rails and EmberJS.}
+	    \resitem{Datarank was acquired by Simply Measured in September of 2015}
+
+	\end{itemize}
+	
+\item
+
+	\ressubheading{RevUnit, LLC.}{Bentonville, AR}{Lead Developer}{February 2013 - March 2014}
 
 	\begin{itemize}
 
@@ -140,7 +160,7 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \item
 
-	\ressubheading{IdeaLoop, LLC.}{Dallas, TX}{Contract Developer}{October 2012 - February 2013}
+	\ressubheading{IdeaLoop, LLC.}{Dallas, TX; Pittsburgh, PA}{Contract Developer}{October 2012 - February 2013}
 
 	\begin{itemize}
 
@@ -200,7 +220,7 @@ Find a secure position in a small team environment passionate about innovation, 
 		
 		\resitem{Co-created, developed and designed all versions and phases of the current implementation of the Dark Mist Framework. An integrated, plugin-based web 2.0 framework capable of being applied to many missions and data-sets - This has saved hundreds of man-hours in analysis and has significantly decreased the initial training for new analysts. Working as a Senior Developer on the project developing new ideas and methods to implement.}
 
-		\resitem{Performed project manager duties by collecting, prioritizing, and assigning requirements and tasks to the team. Reviewing and approving code by the other developer on the team.}
+%		\resitem{Performed project manager duties by collecting, prioritizing, and assigning requirements and tasks to the team. Reviewing and approving code by the other developer on the team.}
 		
 		\resitem{Developed a parser to database over 120,000 archived reports to enable statistics and text searching of all reports with instantly returned results; vastly increasing trend analysis potential of a high value target.}
 		
@@ -212,23 +232,23 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \end{itemize}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\resheading{Selected Open Source Projects and Publications {\mdseries(github.com/addamh)}}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{itemize}
-
-\item \ressubheading{Tesseract}{Ruby on Rails}{Developer availability platform for Northwest Arkansas dev community}{Summer 2012}
-
- 	\begin{itemize}
-
-    \resitem{Platform for freelance developers in Northwest Arkansas to connect with potential employers and recruiters by allowing them to display their skills and availablity in a central location.}
-    
-	\end{itemize}
-
-\end{itemize}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\resheading{Selected Open Source Projects and Publications {\mdseries(github.com/addamh)}}
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%
+%\begin{itemize}
+%
+%\item \ressubheading{Tesseract}{Ruby on Rails}{Developer availability platform for Northwest Arkansas dev community}{Summer 2012}
+%
+% 	\begin{itemize}
+%
+%    \resitem{Platform for freelance developers in Northwest Arkansas to connect with potential employers and recruiters by allowing them to display their skills and availablity in a central location.}
+%    
+%	\end{itemize}
+%
+%\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -240,14 +260,14 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \item {\bf Programming:} Ruby, Ruby on Rails, Objective-C, Java, Perl, PHP, Javascript, Python, Ajax Frameworks, Object-Oriented design 
 	\begin{itemize}
-		\item Ultimately, I am a computer programmer. Not only by trade but by personal interests and hobbies. I could list many different languages I have had experience with but the most important point is that I am personally driven to learn and research new things all the time. I know several languages and techniques and if I don’t know it, I can probably learn it easily and quickly apply it to any task I am given. 
+		\item Ultimately, I am a software engineer. Not only by trade but by personal interests and hobbies. I could list many different languages I have had experience with but the most important point is that I am personally driven to learn and research new things all the time. I know several languages and techniques and if I don’t know it, I can probably learn it easily and quickly apply it to any task I am given. 
 	\end{itemize}
 
 \item {\bf Test/Behavior Driven Development:} Cucumber, Selenium, Capybara, RSpec, OCMock, GHUnit
 
 \item {\bf Database Systems:} PostgreSQL, MySQL, Oracle, DB2, SQLite
 
-\item {\bf Cloud Analytics/Storage:} Hadoop, Cloudbase, Facebook Hive, Zookeeper
+\item {\bf Cloud Analytics/Storage:} Hadoop, Hbase, Cloudbase, Elastic Search
 
 \end{itemize}
 
@@ -314,7 +334,7 @@ Find a secure position in a small team environment passionate about innovation, 
 
 \item
 
-	\ressubheading{University of Arkansas}{Fayetteville, AR}{B.Sc Computer Science (current), B.Sc Electrical Engineering (current)}{2011 - 2014(projected)}
+	\ressubheading{University of Arkansas}{Fayetteville, AR}{B.Sc Computer Science}{2011 - 2015}
 
 \item
 
